# sPrinter

./: .gitignore  .gitmodules  README.md
.github/workflows/: ros_pipeline.yml
ROS_ws/: README.md  dependencies.rosdep
ROS_ws/src/: CMakeLists.txt  README.md
ROS_ws/src/gps/: CMakeLists.txt  README.md  package.xml
ROS_ws/src/gps/launch/: gps.launch
ROS_ws/src/gps/src/: gps_processing.py  mean_gps_node.py
ROS_ws/src/gps_processing/: CMakeLists.txt  README.md  gps_install.sh  package.xml
ROS_ws/src/gps_processing/launch/: gps_processing.launch
ROS_ws/src/gps_processing/src/: dummy_gps.py  dummy_printer_control.py  dummy_task_manager.py  gps_processing.py
ROS_ws/src/imu/: CMakeLists.txt  package.xml  setup.py
ROS_ws/src/imu/launch/: imu.launch
ROS_ws/src/imu/scripts/: computation.py  imu_node.py
ROS_ws/src/imu/src/: computation.py  imu.py  lsm6ds0.py
ROS_ws/src/imu_package/: CMakeLists.txt  package.xml  setup.py
ROS_ws/src/imu_package/launch/: sprinter_imu.launch
ROS_ws/src/imu_package/scripts/: imu.py  imu_node.py  run_imu.py
ROS_ws/src/imu_package/src/: __init__.py  computation.py  lsm6ds0.py
ROS_ws/src/nmea_navsat_driver/cmake/: nmea_navsat_driverConfig.cmake
ROS_ws/src/pose_control/: CMakeLists.txt  README.md  package.xml
ROS_ws/src/pose_control/include/: pose_control.h
ROS_ws/src/pose_control/launch/: pose_control.launch
ROS_ws/src/pose_control/params/: pose_control.yaml
ROS_ws/src/pose_control/src/: pose_control.cpp  pose_control_node.cpp
ROS_ws/src/printer/printer_control/: CMakeLists.txt  README.md  package.xml
ROS_ws/src/printer/printer_control/include/: printer_control.h  printer_joint_positions.h  printer_state.h
ROS_ws/src/printer/printer_control/launch/: printer_control.launch
ROS_ws/src/printer/printer_control/src/: printer_control.cpp  printer_control_node.cpp
ROS_ws/src/printer/printer_ik_solver/: CMakeLists.txt  README.md  package.xml
ROS_ws/src/printer/printer_ik_solver/include/: printer_ik_solver.h
ROS_ws/src/printer/printer_ik_solver/launch/: load_robot_info.launch  printer_ik_solver.launch
ROS_ws/src/printer/printer_ik_solver/src/: printer_ik_solver.cpp  printer_ik_solver_node.cpp
ROS_ws/src/printer_control/: CMakeLists.txt  README.md  package.xml
ROS_ws/src/printer_control/include/: printer_control.h  printer_ik_solver.h
ROS_ws/src/printer_control/launch/: load_robot_info.launch  printer_control.launch
ROS_ws/src/printer_control/src/: printer_control.cpp  printer_control_node.cpp  printer_ik_solver.cpp
ROS_ws/src/ros_bridge/: CMakeLists.txt  README.md  package.xml
ROS_ws/src/ros_bridge/include/: data_packet.h  ros_bridge.h  ros_serial.h  sprinter.h  utility.h
ROS_ws/src/ros_bridge/launch/: ros_bridge.launch
ROS_ws/src/ros_bridge/params/: ros_bridge.yaml
ROS_ws/src/ros_bridge/src/: ros_bridge.cpp  ros_bridge_node.cpp  ros_serial.cpp  sprinter.cpp
ROS_ws/src/sPrinter_description/: CMakeLists.txt  package.xml
ROS_ws/src/sPrinter_description/config/: diff_drive.yaml
ROS_ws/src/sPrinter_description/launch/: controller.launch  controller.yaml  diff_drive_controller.launch  display.launch  display_sprinter.launch  gazebo.launch  urdf.rviz
ROS_ws/src/sPrinter_description/meshes/: boggie_left_1.stl  boggie_right_1.stl  clutch_lever_left_1.stl  main_frame_1.stl  motor_body_1.stl  wheel_left_front_1.stl  wheel_left_rear_1.stl  wheel_right_rear__1.stl
ROS_ws/src/sPrinter_description/urdf/: materials.xacro  sPrinter.gazebo  sPrinter.trans  sPrinter.urdf  sPrinter.xacro
ROS_ws/src/sprinter/: CMakeLists.txt  README.md  package.xml
ROS_ws/src/sprinter/launch/: high_control.launch  mid_control.launch
ROS_ws/src/sprinter_control/: CMakeLists.txt  README.md  mid_control_build.sh  package.xml  setup.py  sprinter_ros_gui.perspective
ROS_ws/src/sprinter_control/include/: sprinter_control.h
ROS_ws/src/sprinter_control/launch/: high_control.launch  mid_control.launch
ROS_ws/src/sprinter_control/rviz/: sprinter.rviz
ROS_ws/src/sprinter_control/src/: sprinter_control.cpp  sprinter_control.py  sprinter_control_node  sprinter_control_node.cpp  visualizer.py
ROS_ws/src/sprinter_description/: CMakeLists.txt  package.xml
ROS_ws/src/sprinter_description/launch/: display.launch  display.rviz  display_sprinter.launch  urdf.rviz
ROS_ws/src/sprinter_description/meshes/: base_link.stl  clutch_body.stl  clutch_lever_right__1.stl  clutch_slider.stl  lens_Xlin.stl  lens_Xrot.stl  lens_Ylin.stl  lens_Yrot.stl  motor_runner.stl  wheel_left_middle_1.stl  wheel_right_front.stl  wheel_right_middle.stl
ROS_ws/src/sprinter_description/urdf/: sPrinter.gazebo  sPrinter.trans  sPrinter.urdf  sPrinter.xacro
ROS_ws/src/sprinter_gui/: CMakeLists.txt  package.xml  setup.py
ROS_ws/src/sprinter_gui/launch/: sprinter_gui.launch
ROS_ws/src/sprinter_gui/src/: sprinter_gui.py  sprinter_gui_node
ROS_ws/src/sprinter_gui/ui/: sPrinter.ui
ROS_ws/src/sprinter_robot_model/: .setup_assistant  CMakeLists.txt  README.md  package.xml
ROS_ws/src/sprinter_robot_model/config/: fake_controllers.yaml  gazebo_sPrinter.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sPrinter.srdf  simple_moveit_controllers.yaml  stomp_planning.yaml
ROS_ws/src/sprinter_robot_model/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  (+17 more)
ROS_ws/src/sprinter_srvs/: CMakeLists.txt  package.xml
ROS_ws/src/sprinter_srvs/srv/: GetIkSolution.srv  GetOrientation.srv  SetPointArr.srv  SetPoseTarget.srv  SetPrinterTarget.srv
ROS_ws/src/state_estimation/: CMakeLists.txt  README.md  package.xml
ROS_ws/src/state_estimation/include/: state_estimation.h
ROS_ws/src/state_estimation/launch/: state_estimation.launch
ROS_ws/src/state_estimation/src/: state_estimation.cpp  state_estimation_node.cpp
ROS_ws/src/task_manager/: CMakeLists.txt  README.md  package.xml
ROS_ws/src/task_manager/include/: task_manager.h
ROS_ws/src/task_manager/src/: task_manager.cpp  task_manager_node.cpp
doc/: Devel_guidelines.md
scripts/: .ros_init.sh  gps.sh  gps_install.sh
(+3 files in other folders)
